crud de clientes, repository, responses, testes e migrations
