# app/Domain/Customer/Enums/DocumentType.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Domain\Customer\Enums;
+
+enum DocumentType: string
+{
+    case Cpf = 'cpf';
+    case Cnpj = 'cnpj';
+}
