# app/Infrastructure/Persistence/Eloquent/Models/CustomerModel.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Infrastructure\Persistence\Eloquent\Models;
+
+use Illuminate\Database\Eloquent\Attributes\Fillable;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+#[Fillable(['name', 'document', 'document_type'])]
+class CustomerModel extends Model
+{
+    use HasFactory;
+
+    protected $table = 'customers';
+}
