# app/Interfaces/Http/Requests/Customer/StoreCustomerRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Interfaces\Http\Requests\Customer;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreCustomerRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'name' => ['required', 'string', 'max:255'],
+            'document' => ['required', 'string', 'max:18'],
+        ];
+    }
+}
