# app/Interfaces/Http/Requests/Customer/UpdateCustomerRequest.php
@@ -1,0 +1,5 @@
+<?php
+
+namespace App\Interfaces\Http\Requests\Customer;
+
+class UpdateCustomerRequest extends StoreCustomerRequest {}
